--- a/src/app/admin/purchase-cancel/purchase-cancel.component.html
+++ b/src/app/admin/purchase-cancel/purchase-cancel.component.html
@@ -3,7 +3,7 @@
     <span class="notice_text">Cancelled bill list :</span>
   </div>
   <div class="count_search">
-    <span class="notice_text"> Total :</span>
+    <span class="notice_tex"> Total :</span>
     <div class="search">
       <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
     </div>
@@ -13,42 +13,93 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort id="table">
           <ng-container matColumnDef="slno">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
             <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
               paginatorRef.pageSize)+(i+1)}}</td>
           </ng-container>
 
           <ng-container matColumnDef="cust_shop_name">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Shop Name</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Party</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.cust_shop_name}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="Item_name">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill no.</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.cust_shop_name}}</td>
           </ng-container>
 
           <ng-container matColumnDef="cust_owner_name">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Owner Name</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.cust_owner_name}}</td>
           </ng-container>
 
           <ng-container matColumnDef="cust_contact_no">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Contact Number</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Basic amount</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.cust_contact_no}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Action">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
             <td class="data" mat-cell *matCellDef="let row">
               <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
             </td>
           </ng-container>
+
+          
+          <ng-container matColumnDef="Gst">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
+            <td class="data" mat-cell *matCellDef="let row">
+              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Date">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+            <td class="data" mat-cell *matCellDef="let row">
+              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Gross amount">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Gross amount</th>
+            <td class="data" mat-cell *matCellDef="let row">
+              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Cancel_reasion">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Cancel reasion</th>
+            <td class="data" mat-cell *matCellDef="let row">
+              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
+            </td>
+          </ng-container>
+         
+
+          <ng-container matColumnDef="View_notice">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>View</th>
+            <td class="data" mat-cell *matCellDef="let row">
+              <mat-icon (click)="edit_Purchase_cancel(row)">View</mat-icon>
+            </td>
+          </ng-container>
+
+          
+
+
+          
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
           </tr>
+
+       
+
         </table>
         <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
           aria-label="Select page of users"></mat-paginator>
       </div>
     </form>
   </div>
+
 </div>
