--- a/src/app/admin/sale-cancel/sale-cancel.component.html
+++ b/src/app/admin/sale-cancel/sale-cancel.component.html
@@ -3,7 +3,7 @@
         <span class="notice_text">Sale cancel bill :</span>
     </div>
     <div class="count_search">
-        <span class="notice_text">Total :</span>
+        <span class="notice_tex">Total :</span>
         <div class="search">
             <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
         </div>
@@ -13,7 +13,7 @@
             <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource" matSort id="table">
                     <ng-container matColumnDef="slno">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
                         <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
                             paginatorRef.pageSize)+(i+1)}}
                         </td>
@@ -27,31 +27,37 @@
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_total_amount">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Total amount</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_total_amount}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_dues">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Dues</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Basic amount</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_dues}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_gst">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_gst}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_discount">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_discount}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_Cancel_reason">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-heade>Cancel Reason</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-heade>Paybill amount</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_Cancel_reason}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_date">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Paid</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_date}}</td>
                     </ng-container>
                     <ng-container matColumnDef="Action">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Dues</th>
+                        <td class="data" mat-cell *matCellDef="let row">
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Date">
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                         <td class="data" mat-cell *matCellDef="let row">
                         </td>
                     </ng-container>
