--- a/src/app/admin/stock-report/stock-report.component.css
+++ b/src/app/admin/stock-report/stock-report.component.css
@@ -16,11 +16,11 @@
 }
 
 .text_box{
-    width: 150px;
+    width: 152px;
     margin-top: -1px;
     float: right;
     position: fixed;
-    margin-left: 940px;
+    margin-left: 943px;
     padding: 31px 2px 1px 5px;
     border-bottom: 1px solid black;
 }
@@ -62,7 +62,8 @@ mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 21px;
+    padding-left: 2px;
 }
 
 #table {
@@ -116,14 +117,13 @@ ng-container {
 .footer_amount {
     width: 100%;
     height:44px;
-    margin-top: 463px;
-    background-color: #191d1d;
+    margin-top: 452px;
+    background-color: #0a4547;
 }
 .footer_amount span {  
-    margin-left:315px;
     color: whitesmoke;
     letter-spacing: 1px;   
     line-height:47px; 
-    padding-left: 5px;
+    padding-left: 178px;
 }
-
+/* ------------------------------------------------Media Query----------------------------------------------------*/
