--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/party">
         <div class="thumbnail">
             <mat-icon>person</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_role}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_party}}</b></span><br>
             <span style="color: #14595c;">Party</span>
         </div>
     </a>
@@ -10,7 +10,7 @@
     <a routerLink="/unit">
         <div class="thumbnail">
             <mat-icon>ac_unit</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_emp}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_unit}}</b></span><br>
             <span style="color: #14595c;">Unit</span>
         </div>
     </a>
@@ -18,7 +18,7 @@
     <a routerLink="/gst">
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255) "><b>{{total_cat}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255) "><b>{{total_gst}}</b></span><br>
             <span style="color: #14595c;">GST</span>
         </div>
     </a>
@@ -26,7 +26,7 @@
     <a routerLink="/weigth">
         <div class="thumbnail">
             <mat-icon>line_weight</mat-icon><br>
-            <span style=" color:rgb(255, 255, 255)"><b>{{total_item}}</b></span><br>
+            <span style=" color:rgb(255, 255, 255)"><b>{{total_weight}}</b></span><br>
             <span style="color: #14595c;">Weight</span>
         </div>
     </a>
@@ -34,7 +34,7 @@
     <a routerLink="/size">
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_shop}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_size}}</b></span><br>
             <span style="color: #14595c;">Size</span>
         </div>
     </a>
@@ -42,7 +42,7 @@
     <a routerLink="/category">
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_spo}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_category}}</b></span><br>
             <span style="color: #14595c;">Category</span>
         </div>
     </a>
@@ -50,21 +50,21 @@
     <a routerLink="/item">
         <div class="thumbnail">
             <mat-icon> group_work </mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_item}}</b></span><br>
             <span style="color: #14595c;">Item</span>
         </div>
     </a>
     <a routerLink="/product">
         <div class="thumbnail">
             <mat-icon>area_chart</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_offer}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_product}}</b></span><br>
             <span style="color: #14595c;">Product</span>
         </div>
     </a>
     <a routerLink="/employee">
         <div class="thumbnail">
             <mat-icon>people</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_noti}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_employee}}</b></span><br>
             <span style="color: #14595c;">Employee</span>
         </div>
     </a>
@@ -72,21 +72,21 @@
     <a routerLink="/customer">
         <div class="thumbnail">
             <mat-icon>supervisor_account</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_customer}}</b></span><br>
             <span style="color: #14595c;">Customer</span>
         </div>
     </a>
     <a routerLink="/area">
         <div class="thumbnail">
             <mat-icon>location_on</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_area}}</b></span><br>
             <span style="color:#14595c;">Area</span>
         </div>
 
         <a routerLink="/purchase">
             <div class="thumbnail">
                 <mat-icon>shoping</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_purchase}}</b></span><br>
                 <span style="color:#14595c;">Purchase</span>
             </div>
         </a>
@@ -94,7 +94,7 @@
         <a routerLink="/material-handover">
             <div class="thumbnail">
                 <mat-icon>gradient</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_mh}}</b></span><br>
                 <span style="color:#14595c;">Material Handover</span>
             </div>
         </a>
@@ -102,7 +102,7 @@
         <a routerLink="/production">
             <div class="thumbnail">
                 <mat-icon>business</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_production}}</b></span><br>
                 <span style="color:#14595c;">Production</span>
             </div>
         </a>
@@ -110,7 +110,7 @@
         <a routerLink="/area-allocate">
             <div class="thumbnail">
                 <mat-icon>location_on</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_area_alct}}</b></span><br>
                 <span style="color:#14595c;">Area Allocate</span>
             </div>
         </a>
@@ -118,7 +118,7 @@
         <a routerLink="/sale">
             <div class="thumbnail">
                 <mat-icon>local_grocery_store</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_sale}}</b></span><br>
                 <span style="color:#14595c;">Sale</span>
             </div>
         </a>
@@ -126,7 +126,7 @@
         <a routerLink="/dues">
             <div class="thumbnail">
                 <mat-icon>payment</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
                 <span style="color:#14595c;">Dues</span>
             </div>
         </a>
@@ -134,7 +134,7 @@
         <a routerLink="/reciept">
             <div class="thumbnail">
                 <mat-icon>receipt</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
                 <span style="color:#14595c;">Reciept</span>
             </div>
         </a>
@@ -142,7 +142,7 @@
         <a routerLink="/account">
             <div class="thumbnail">
                 <mat-icon>account_circle</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
                 <span style="color:#14595c;">Account</span>
             </div>
         </a>
@@ -150,7 +150,7 @@
         <a routerLink="/expense">
             <div class="thumbnail">
                 <mat-icon>monetization_on</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
                 <span style="color:#14595c;">Expense</span>
             </div>
         </a>
